Add add pickup method
